bug squashing

--- a/src/app/components/landing/battlefield/fighter-section/fightersection.component.css
+++ b/src/app/components/landing/battlefield/fighter-section/fightersection.component.css
@@ -294,7 +294,9 @@ i:hover {
     position: absolute;
     font-size: 25px;
     bottom: 15px;
-    right: 20px;
+    right: 10px;
+    text-align: right;
+    width: 50px;
 }
 
 .weaponSquareShell:hover .weaponSquare {
